Fixed width overflow issue on mobile

--- a/style.css
+++ b/style.css
@@ -375,7 +375,7 @@ a {
   }
 
   #education h3 {
-    width: 90%;
+    width: 80%;
     float: none;
     padding-bottom: 10px;
     order: 2;
@@ -391,7 +391,7 @@ a {
     float: none;
     order: 3;
     display: block;
-    width: 90%;
+    width: 80%;
     text-align: left;
     font-size: 18px;
     font-weight: normal;
@@ -406,13 +406,14 @@ a {
 
   #employment h2 {
     width: 80%;
+    padding-right: 0;
     padding-bottom: 10px;
     float: none;
     order: 1;
   }
 
   #employment h3 {
-    width: 90%;
+    width: 80%;
     float: none;
     padding-bottom: 10px;
     order: 2;
@@ -423,7 +424,7 @@ a {
     float: none;
     order: 3;
     display: block;
-    width: 90%;
+    width: 80%;
     text-align: left;
     font-size: 18px;
     font-weight: normal;
